[gd_scene load_steps=2 format=2]

[ext_resource path="res://code/Control/chat.gd" type="Script" id=1]

[node name="chat" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="output" type="RichTextLabel" parent="."]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 31.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
bbcode_enabled = true
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
override_selected_font_color = false
_sections_unfolded = [ "Anchor", "BBCode", "Margin" ]

[node name="input" type="LineEdit" parent="."]

anchor_left = 0.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = -25.0
margin_right = -1.0
margin_bottom = -1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
max_length = 66
focus_mode = 1
placeholder_text = "Chat"
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
context_menu_enabled = true
_sections_unfolded = [ "Anchor", "Margin", "Placeholder" ]

[connection signal="mouse_entered" from="output" to="." method="_on_output_mouse_entered"]

[connection signal="mouse_exited" from="output" to="." method="_on_output_mouse_exited"]

[connection signal="focus_entered" from="input" to="." method="_on_input_focus_entered"]

[connection signal="focus_exited" from="input" to="." method="_on_input_focus_exited"]

[connection signal="mouse_entered" from="input" to="." method="_on_input_mouse_entered"]

[connection signal="mouse_exited" from="input" to="." method="_on_input_mouse_exited"]

[connection signal="text_entered" from="input" to="." method="_on_input_text_entered"]


